# vzaps-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_auth_and_list_instances.py  02_create_instance.py  03_instance_subscription.py  04_session_and_pairing.py  05_configure_webhook.py  06_realtime_subscribe.py  07_send_text_message.py  08_send_media_and_interactive.py  09_send_poll_reaction_and_chat_actions.py  10_queues.py  11_typebot_and_chatwoot.py  README.md  _env.py  requirements.txt
src/vzaps/: __init__.py  _utils.py  async_client.py  client.py  config.py  errors.py  http.py  models.py
src/vzaps/realtime/: __init__.py  events.py  events_types.py  subscription.py
src/vzaps/resources/: __init__.py  _helpers.py  async_resources.py  resources.py
tests/: test_auth.py  test_http.py  test_messages.py  test_realtime.py  test_resources.py
