[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vzaps"
dynamic = ["version"]
description = "Official Python SDK for the VZaps public API."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "VZaps", email = "dev@vzaps.com" }]
maintainers = [{ name = "VZaps", email = "dev@vzaps.com" }]
keywords = ["vzaps", "whatsapp", "api", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
  "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=5,<8",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
  "twine>=5,<7",
]

[project.urls]
Documentation = "https://docs.vzaps.com"
Homepage = "https://vzaps.com"
Repository = "https://github.com/VZaps/vzaps-sdk-python"
Issues = "https://github.com/VZaps/vzaps-sdk-python/issues"

[tool.hatch.version]
path = "src/vzaps/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vzaps"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["vzaps"]

[tool.coverage.report]
show_missing = true
skip_covered = true
